dbHash should return SnapshotUnavailable if _id index is not visible in the current snapshot

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.9.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2020-10-05, Execution Team 2020-10-19
    • 21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The test-only command 'emptycapped' drops and recreates all indexes. Because of this, it is possible for dbHash to pick a read timestamp where the new _id index is not visible yet. Instead of returning a 'no _id index' error, dbHash should return a SnapshotUnavailable error, which is already an expected and routine error code. 

      This problem can be fixed by having 'emptycapped' set the collection's minimumVisibleSnapshot.

            Assignee:
            Louis Williams
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: