SERVER-51228 dbHash should return SnapshotUnavailable if the _id index is not visible or ready